# disc-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  db_params.yaml  environment.yml  pyproject.toml  requirements.txt
data/: dependencies_you_they_we.tsv
data/input/original_sample/: abortion-tweets-pretty.json  abortion-tweets.jsonl  lynching-tweets.jsonl
data/input/original_sample/incel/: incel_data_16032023_fixed_sample.jsonl  incel_htmls_sample.jsonl  incel_quotes_sample.jsonl  skipped_urls.txt
data/input/parquet/: fetch-parquets.sh
data/input/sample/: abortion_sample_conversations.tsv  abortion_sample_tweet_hashtags.tsv  abortion_sample_tweet_mentions.tsv  abortion_sample_tweets.tsv  abortion_sample_users.tsv  incel_sample_posts.tsv  incel_sample_quotes.tsv  incel_sample_threads.tsv  incel_sample_users.tsv  lynching_sample_conversations.tsv  lynching_sample_tweet_hashtags.tsv  lynching_sample_tweet_mentions.tsv  lynching_sample_tweets.tsv  lynching_sample_users.tsv
data/output/jiemakel/: cels.tsv  cels2.tsv  pp_sentences.spacydocs  you_we_they_are.spacydocs
data/output/jiemakel/pp_sentences.vocab.txt/: strings.json
data/output/kanner/: canonical_predicative_clauses.tsv  canonical_transitive_clauses.tsv
data/output/umit/: fakecels.csv  truecels.csv
data/pihla/: abortion_randomsample_100k.txt  incel_randomsample_100k.txt  incel_randomsample_50000.txt  randomforest_results_sample.txt
src/: common_basis.R  common_basis.py  create-downstream-tables.Rmd  create-downstream-tables.nb.html
src/Kerstin/: which_cels_are_fakecels.ipynb
src/example_user/: db_example.ipynb  example_analysis.ipynb  example_analysis.nb.html  parquet_example.ipynb
src/jiemakel/: discussion-structure-analysis.Rmd  discussion-structure-analysis.nb.html  filter_i_we_you-Copy1.ipynb  filter_i_we_you.ipynb  identity-analysis.Rmd  incel-analysis.Rmd  incel-analysis.md  incel-analysis.nb.html  tweet-analysis.Rmd  tweet-analysis.md  tweet-analysis.nb.html
src/jiemakel/.ipynb_checkpoints/: filter_i_we_you-checkpoint.ipynb
src/milja/: engaging.txt  engaging_threads.txt  example_analysis.Rmd  post_order_replies_under50  testing.Rmd  testing.nb.html  top_quoted_posts.csv  top_quoted_posts.tsv
src/ninaec/: incel_forum_example.ipynb  lynch_twitter_example.ipynb  parquet_example.ipynb
src/pihla/: take_tweet_sample_example.ipynb
src/siyi/: conversation_analysis.ipynb  tree_plot.ipynb
src/umit/: cleanup_data.py  fakecel_truecel.py
