[tool.poetry]
name = "disc-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
PyMySQL = "^1.0.3"
hereutil = "^0.1.3"
keyring = "^23.13.1"
jupytext = "^1.14.5"
jupyterlab = "^3.6.3"
SQLAlchemy = "^2.0.13"
google-api-python-client = "^2.86.0"
matplotlib = "^3.7.1"
pandas = {extras = ["parquet"], version = "^2.0.1"}
spacy = "^3.5.3"
en_core_web_trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.5.0/en_core_web_trf-3.5.0-py3-none-any.whl" }
pyspark = "^3.4.0"
findspark = "^2.0.1"
ipywidgets = "^8.0.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
